crates/vouched/tests/ui/vouched/range_signed_boundary_for_unsigned.rs
use vouched::Vouched;

#[derive(Vouched)]
#[vouched(range(-1..=10))]
struct UnsignedRange(u32);

fn main() {}
